# python-course

./: LICENSE
.github/workflows/: publish.yml
00_setup/: Python-cc.kdbx  setup.sql
01_chapter/01_control_dependencies/: deploy.sh
01_chapter/01_control_dependencies/zp1/: pyproject.toml
01_chapter/01_control_dependencies/zp2/: pyproject.toml
01_chapter/01_control_dependencies/zp3_v2/: pyproject.toml
01_chapter/02_pipenv_first_steps/: Pipfile
01_environment_mgmt/01_conflicting_dependencies/: Readme.md
01_environment_mgmt/02_pipenv_first_steps/: Pipfile  snake.py
01_environment_mgmt/03_poetry_first_steps/: pyproject.toml
02_notebooks/: ranking.ipynb
02_packaging/: 01_ranking.ipynb  positions.csv
02_packaging/01_setup_project/: Pipfile  setup.py
02_packaging/01_setup_project_solution/: setup.cfg
03_clean_code/01_ranking_refactor/: setup.py
03_clean_code/XX_ranking_refactor/: Pipfile
04_OOP/: attibutes.py  binary_tree_no_hint.py  mutable_default_arguments.py
05_Concurrency/: Pipfile
05_Concurrency/web_crawler/: crawler_asyncio.py
05_Concurrency/web_crawler/slides/: counter.py  (+3 more)
06_advanced_python_topics/: 03_decorator_syntactic_sugar.py  context_manager.py  inheritance_mixin.py
Data/: instruments.csv  portfolios.csv
XX_Concurrency/web_crawler/: crawler_multiprocessing.py  crawler_sync.py  crawler_threading.py
XX_OOP/: binary_tree_generic_type.py  encapsulation.py
XX_advanced_python_topics/: 01_decorator_first_class_citizen.py  02_decorator_simple.py  04_decorator_who_are_you.py  decorator.py  inheritance_multiple.py  metaclass.py
(+15 files in other folders)
